# ThrEv

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  libthrev.c  libthrev.pc.in  libthrev_config  main.c  threv-client.c  threv-server.c  threv-test.pc.in  threv.c  threv.h  threv_test_config
